--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>Ollie Bike Sharing</title>
   <meta charset="utf-8"/>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
