resume info update

--- a/index.html
+++ b/index.html
@@ -1,28 +1,103 @@
-<html>
-<head>
-  <title>Ollie Bike Sharing</title>
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <div class="nav">
-      <h2>Ollie</h2>
-      <ul>
-        <li>sign up</li>
-        <li>search bikes</li>
-        <li>reserve a bike</li>
-        <li>about us</li>
-      </ul>
-    </div>
-    <div class="main">
-      <h1>Ollie Bike Sharing</h1>
-      <h3>Share Your Pedals with the World.</h3>
-      <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental. Here is a <a href="cities.html">list</a> of cities where you can find us.</p>
-      <video width="320" height="240" controls>
-        <source src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
-      </video>
-    </div>
-  </div>
-</body>
+
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
+		<title>My Prime Academy Application Submission</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	</head>
+
+	<body>
+		<div id="container">
+			<div id="content-contact">
+				<h1>Ignatius Bandanadham</h1>
+				<h2>mailvijay77@gmail.com</h2>
+				<h2>Eagan, MN 55122</h2>
+				<h2>952 956 4044</h2>
+			</div>
+
+			<div id="content-summary">
+				<h3>Profile</h3>
+				<p>I am a QA Analyst with an emphasis on Quality Assurance with Manual & Automated Testing of Client/Server, Server-side (API's, Web Services), Windows-Based, Mainframes, Web-based and Mobile applications.  I am  a strong and enthusiastic communicator with a proactive approach and work well across teams in agile or other environments.  I worked on .Net and Java applications.  Work well with cross-functional teams and currently doing so with Stake holders, Architects, Developers, other QA Analysts, a Scrum Master and a Product Owner in a DevOps environment.
+
+I have expertise in black box testing, functional testing, regression testing, database testing, ETL testing, integration testing, system testing, user acceptance testing (UAT) and end-to-end testing.  Highly skilled in analyzing business and functional requirement documents, use cases, user stories and acceptance criteria. Experience in creating test scripts using JAVA and Selenium Web Driver for the Automation testing of the application.
+
+My work status is Green Card. I am a postgraduate in MSc in Information Technology. I have been with US Bank since September of 2017 across 3 consecutive projects.
+</p>
+			</div>
+
+			<div id="content-professional"> Professional Experience
+				<div id="content-U S Bank">
+					<h3>U S Bank</h3>
+					<div class="block-date">
+							<h4>QA Lead</h4>
+							<h4>September 2017 - Current</h4>
+					</div>		
+					<div class"block-content">
+							<ul>	
+								<li>Analyzed Interface Control Documents (ICD) and wireframes to validate scenarios specific to interface contained in the service.</li>
+								<li>Created test cases with Positive, Negative and exceptional scenarios, validated with the help of assertions in Test suites.</li>
+								<li>Performed functional testing and integration testing and executed test cases in SOAPUI.</li>
+								<li>Maintained Test results document, Inventory document in shared drive. </li>
+								<li>Worked with mainframes and Tibco developers, understand the system and learn the areas of concerns.</li>
+								<li>Majorly took part in middleware testing for service delivery using Tibco and Mainframe.</li>
+							</ul>	
+					</div>
+				</div>
+
+
+				<div id="content-UHG - Optum">
+					<h3>UHG - Optum</h3>
+					<div class="block-date">
+							<h4>Senior QA Analyst</h4>
+							<h4>March 2017 – August 2017</h4>
+					</div>		
+					<div class"block-content">
+							<ul>	
+								<li>Participated in a Scrum team, including all Agile, Scrum-related ceremonies and working sessions.</li>
+								<li>Worked with cross-functional teams (Architects, Developers, QA) in API development activities across the organization.</li>
+								<li>Created test cases for RESTful API's based on data mapping document in Rally tool.</li>
+								<li>Performed functional, integration, End-to-End testing, regression and performance testing of Restful API services in DevOps environment.</li>
+							</ul>	
+					</div>
+				</div>
+
+
+				<div id="content-Data Recognition Corporation">
+					<h3>Data Recognition Corporation</h3>
+					<div class="block-date">
+							<h4>Senior QA Analyst</h4>
+							<h4>March 2016 – February 2017</h4>
+					</div>		
+					<div class"block-content">
+							<ul>	
+								<li>Attended daily stand up meetings, backlog grooming, Sprint reviews and retrospectives.</li>
+								<li>Create well-defined acceptance criteria from User stories thereby helping the team to meet stake holder expectations.
+								</li>
+								<li>Attended daily working sessions and reviewed business requirements for testability.</li>
+							</ul>
+					</div>
+				<div id="content-Prime Therapeutics">
+					<h3>Prime Therapeutics</h3>
+
+
+					<div class="block-date">
+							<h4>Senior QA Analyst</h4>
+							<h4>June 2015 – Dec 2015</h4>
+					</div>		
+					<div class"block-content">
+							<ul>	
+								<li>Worked in a fast-paced environment with proven experience in delivering multiple tasks according to schedules. </li>
+								<li>Developed test plans, prepared test environment, test scenarios, test data and test scripts.</li>
+							</ul>	
+					</div>
+				</div>
+			</div>
+			
+
+			
+		</div>
+
+	</body>
 </html>
